making trascation crud and api for dashboard summary

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #JWT CONFIG
 jwt.secret=your-super-secret-key-for-jwt-signing-which-should-be-very-long-and-secure-at-least-256-bits
 jwt.expiration=36000000
+
+#Loggin config
+logging.level.root=WARN
+logging.level.org.springframework=WARN
+logging.level.org.hibernate=WARN
