making budget functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=finance-tracker
-spring.datasource.url=jdbc:postgresql://localhost:5432/financetracker
+spring.datasource.url=jdbc:postgresql://localhost:5432/financemanager
 spring.datasource.username=yatharth
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
