making email service for transaction and learning event listeners and publishers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,20 @@ jwt.secret=your-super-secret-key-for-jwt-signing-which-should-be-very-long-and-s
 jwt.expiration=36000000
 
 #Loggin config
-logging.level.root=WARN
-logging.level.org.springframework=WARN
-logging.level.org.hibernate=WARN
+logging.level.root=INFO
+logging.level.com.yatharth.finance_tracker=DEBUG
+logging.level.org.springframework.mail=DEBUG
+logging.level.org.springframework.context.event=DEBUG
+
+
+#Gmail mail service
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=lucifer7112002@gmail.com
+spring.mail.password=atja dkxh logh hpwc
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+app.email.enabled=true
+app.email.from=lucifer7112002@gmail.com
+app.email.from-name=Finance Tracker
